results/SVCOMP/4-shot/log-CharSequenceToString-2024_03_18_11_55_09.txt
public class CharSequenceToString {

    //@ requires arg != null;
    //@ requires arg instanceof CharSequence;
    //@ ensures \result ==> ((cs.toString().equals("case1") && cs.length() == 5) || cs.toString().equals("case1") || cs.length() == 5);
    //@ ensures !\result ==> \result == false;
    public static boolean main(String arg) {
        CharSequence cs = (CharSequence) arg;
        String s = cs.toString();
        int i = -1;
        if (s.equals("case1")) i = cs.length();
        return i == -1 || i == 5;
    }
  
}
/home/max/Documents/JMLGPT/tmp/CharSequenceToString.java:5: error: cannot find symbol
    //@ ensures \result ==> ((cs.toString().equals("case1") && cs.length() == 5) || cs.toString().equals("case1") || cs.length() == 5);
                              ^
  symbol:   variable cs
  location: class CharSequenceToString
/home/max/Documents/JMLGPT/tmp/CharSequenceToString.java:5: error: cannot find symbol
    //@ ensures \result ==> ((cs.toString().equals("case1") && cs.length() == 5) || cs.toString().equals("case1") || cs.length() == 5);
                                                               ^
  symbol:   variable cs
  location: class CharSequenceToString
/home/max/Documents/JMLGPT/tmp/CharSequenceToString.java:5: error: cannot find symbol
    //@ ensures \result ==> ((cs.toString().equals("case1") && cs.length() == 5) || cs.toString().equals("case1") || cs.length() == 5);
                                                                                    ^
  symbol:   variable cs
  location: class CharSequenceToString
/home/max/Documents/JMLGPT/tmp/CharSequenceToString.java:5: error: cannot find symbol
    //@ ensures \result ==> ((cs.toString().equals("case1") && cs.length() == 5) || cs.toString().equals("case1") || cs.length() == 5);
                                                                                                                     ^
  symbol:   variable cs
  location: class CharSequenceToString
4 errors

